[ARQ-1723] Managed Karaf Container should use java instead of bin/karaf